# Crypto_Streaming

./: .gitignore  docker-compose.yml  dockerfile  dockerfile.metabase.debug  pyproject.toml
crypto_dbt/: .user.yml  dbt_project.yml  profiles.yml
crypto_dbt/macros/: generate_schema_name.sql
crypto_dbt/models/marts/: fct_btc.sql  schema.yml
crypto_dbt/models/staging/: schema.yml  stg_crypto.sql
dags/: ducklake_add_dag.py  run_dbt_btc_fct_mart.py
src/: consumer.py  ducklake_add.py  main.py  run_dbt_airflow.py
